--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
   <footer>
    <ul>
    <li><a href="mailto:zhz@apache.org">email</a></li>
-   <li><a href="https://github.com/zhe-thoughts/wandsaber">github.com/zhe-thoughts/wandsaber</a></li>
+   <li><a href="https://github.com/wandsaber">github.com/wandsaber</a></li>
    </ul>
   </footer>
   </body>
