--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="/blog">Read the Book</a></li>
+<li><a href="/authors">Meet the Authors</a></li>
 </ul>
     </nav>
 <div class="container">
