--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 <li><a href="/">Home</a></li>
 <li><a href="/blog">Read the Book</a></li>
 <li><a href="/authors">Meet the Authors</a></li>
-<li><a href="/yoda_talker">Yoda Talker App</a></li>
+<li><a href="http://100.26.9.225/">Yoda Talker App</a></li>
 </ul>
     </nav>
 <div class="container">
